--- a/views/main/login.hbs
+++ b/views/main/login.hbs
@@ -34,7 +34,7 @@
             <hr class="my-3">
 
             <h6 class="text-center">Vous n'avez pas de compte?</h6>
-            <a class="mt-3 btn btn-lg btn-primary btn-block text-uppercase" href="createaccount">Créer un compte</a>
+            <a class="mt-3 btn btn-lg btn-primary btn-block text-uppercase" href="register">Créer un compte</a>
 
           </div>
         </div>
