--- a/public/views/client/calendar.hbs
+++ b/public/views/client/calendar.hbs
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
 
-  <title>Accueil Manon Psychologie pour Enfants</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="../../script/calendrierClients.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../../css/calendrierClient.css">
+  <script type="text/javascript" src="../../script/calendrierClients.js"></script>
 
 </head>
 
@@ -26,7 +18,6 @@
         {{{resultat}}}
 
       </div>
-
     </div>
   </div>
 </div>
