--- a/public/views/psychologue/reservations.hbs
+++ b/public/views/psychologue/reservations.hbs
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
 
-  <title>Accueil Manon Psychologie pour Enfants</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="../../script/calendrierPsycho.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../../css/calendrierPsycho.css">
 
 </head>
 
@@ -32,9 +24,13 @@
           </div>
         </div>
         <hr class="mt-4">
+        <div id="month" class="month">
+        </div>
+
+        <div id="calendrierPsycho">
+        </div>
           {{{resultat}}}
       </div>
-
     </div>
   </div>
 </div>
