--- a/public/views/partials/clientNon.hbs
+++ b/public/views/partials/clientNon.hbs
@@ -2,7 +2,7 @@
 
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="/profil">Profil</a>
+      <a class="nav-link" href="/profil_client">Profil</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/reservation">Vos Réservations</a>
