Cookie check and Partial registration
check cookies for every implemented routes.
added user creations entry. 
missing check function for the form

--- a/public/views/main/register.hbs
+++ b/public/views/main/register.hbs
@@ -152,7 +152,7 @@
 
           <div class="form-group">
             <label for="num_telephone_parent2">Numéro de téléphone (Format: 819-000-0000): </label>
-            <input type="tel" class="form-control" id="num_telephone_parent2" name="num_telephone_parent2" placeholder="Entrer le numéro de téléphone du parent" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <input type="tel" class="form-control" id="num_telephone_parent2" name="num_telephone_parent2" placeholder="Entrer le numéro de téléphone du parent" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
