--- a/public/views/partials/client.hbs
+++ b/public/views/partials/client.hbs
@@ -11,7 +11,7 @@
       <a class="nav-link" href="/calendrier">Disponibilités</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/private-route">Deconnection</a>
+      <a class="nav-link" href="/logout">Deconnection</a>
     </li>
   </ul>
 
