--- a/public/views/partials/psycho.hbs
+++ b/public/views/partials/psycho.hbs
@@ -11,7 +11,7 @@
       <a class="nav-link" href="/calendrier_psychologue">Réservations</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/private-route">Deconnection</a>
+      <a class="nav-link" href="/logout">Deconnection</a>
     </li>
   </ul>
 
