added required info on register page
added an asterisk next to every required info

--- a/public/views/main/register.hbs
+++ b/public/views/main/register.hbs
@@ -16,29 +16,30 @@
       <div class="card-body">
         <form action="/register" method="post">
 
+
           <div class="form-group">
-            <label for="nom_enfant">Nom de l'enfant: </label>
+            <label for="nom_enfant">Nom de l'enfant<span>*</span>: </label>
             <input type="text" class="form-control" name="nom_enfant" placeholder="Entrer le nom de famille" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_enfant">Prénom de l'enfant: </label>
+            <label for="prenom_enfant">Prénom de l'enfant<span>*</span>: </label>
             <input type="text" class="form-control" name="prenom_enfant" placeholder="Entrer le prénom de l'enfant" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="date_de_naissance_enfant">Date de naissance: </label>
+            <label for="date_de_naissance_enfant">Date de naissance<span>*</span>: </label>
             <input type="date" class="form-control" name="date_de_naissance_enfant" placeholder="aaaa-mm-jj" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group-inline">
-            <label for="sexe_enfant">Sexe: </label>
+            <label for="sexe_enfant">Sexe<span>*</span>: </label>
             <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_enfant" value="M">
             <label for="sexe_enfant" class="ml-4">Garçon</label>
             <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_enfant" value="F">
@@ -46,7 +47,7 @@
           </div>
 
           <div class="form-group">
-            <label for="courriel_enfant">Courriel: </label>
+            <label for="courriel_enfant">Courriel<span>*</span>: </label>
             <input type="email" class="form-control" id="courriel_enfant" name="courriel_enfant" placeholder="Entrer l'adresse courriel de l'enfant" required>
             <input type="checkbox" class="ml-1" onchange="onSelectCourrielEnfant(this)" name="courrielcheckenfant" value="true"> Mon enfant n'a pas une adresse courriel <br>
             <div class="valid-feedback">Valide.</div>
@@ -66,28 +67,28 @@
           </div>
 
           <div class="form-group">
-            <label for="nom_parent1">Nom du parent: </label>
+            <label for="nom_parent1">Nom du parent<span>*</span>: </label>
             <input type="text" class="form-control" name="nom_parent1" placeholder="Entrer le nom du parent" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_parent1">Prénom du parent: </label>
+            <label for="prenom_parent1">Prénom du parent<span>*</span>: </label>
             <input type="text" class="form-control" name="prenom_parent1" placeholder="Entrer le prénom du parent" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="date_de_naissance_parent1">Date de naissance: </label>
+            <label for="date_de_naissance_parent1">Date de naissance<span>*</span>: </label>
             <input type="date" class="form-control" name="date_de_naissance_parent1" placeholder="aaaa-mm-jj" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group-inline">
-            <label for="sexe_parent1">Sexe: </label>
+            <label for="sexe_parent1">Sexe<span>*</span>: </label>
             <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_parent1" value="M">
             <label for="sexe_parent1" class="ml-4">Homme</label>
             <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_parent1" value="F">
@@ -95,14 +96,14 @@
           </div>
 
           <div class="form-group">
-            <label for="courriel_parent1">Courriel: </label>
+            <label for="courriel_parent1">Courriel<span>*</span>: </label>
             <input type="email" class="form-control" name="courriel_parent1" placeholder="Entrer l'adresse courriel du parent" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="num_telephone_parent1">Numéro de téléphone (Format: 819-000-0000): </label>
+            <label for="num_telephone_parent1">Numéro de téléphone (Format: 819-000-0000)<span>*</span>: </label>
             <input type="tel" class="form-control" name="num_telephone_parent1" placeholder="Entrer le numéro de téléphone du parent" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
@@ -164,7 +165,7 @@
           </div>
 
           <div class="form-group">
-            <label class="mt-1" for="courriel_utilise">Quelle adresse courriel voulez-vous utilisé pour le compte? </label>
+            <label class="mt-1" for="courriel_utilise">Quelle adresse courriel voulez-vous utilisé pour le compte?<span>*</span> </label>
           </div>
           <div class="form-group">
             <input type="checkbox" id="btnemail1" class="form-check-input ml-2" name="courriel_utilise1" value="parent1">
@@ -176,11 +177,11 @@
           </div>
 
           <div class="form-group-inline">
-            <label for="mot_de_passe">Mot de passe: </label>
+            <label for="mot_de_passe">Mot de passe<span>*</span>: </label>
             <input type="password" id="firstPW" class="form-control" name="mot_de_passe" placeholder="Entrer le mot de passe" required>
           </div>
           <div class="form-group-inline">
-            <label class="mt-2" for="mot_de_passe">Confirmer le mot de passe: </label>
+            <label class="mt-2" for="mot_de_passe">Confirmer le mot de passe<span>*</span>: </label>
             <input type="password" id="confirmPW" oninput="CheckPW()" class="form-control" name="mot_de_passe" placeholder="Confirmer le mot de passe" required>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
             <p id="alertPW"></p>
@@ -189,6 +190,7 @@
           <div class="text-center">
             <button id="bouton" type="submit" class="btn btn-primary center-block mb-2 mt-3">Submit</button>
           </div>
+          <div class="text-center" id="message">*information obligatoire</div>
 
         </form>
       </div>
