Really minor changes
added error comment in AuthControllers
changed placeholder for email in login page

--- a/public/views/main/login.hbs
+++ b/public/views/main/login.hbs
@@ -14,7 +14,7 @@
         <form class="form-signin" action="/login" method="post">
           <div class="form-label-group">
             <label for="inputCourriel">Adresse Courriel</label>
-            <input type="nomEnfant" id="inputEnfant" name="inputCourriel" class="mb-2 form-control" placeholder="Nom de l'Enfant" required autofocus>
+            <input type="nomEnfant" id="inputEnfant" name="inputCourriel" class="mb-2 form-control" placeholder="Adresse Courriel" required autofocus>
           </div>
 
           <div class="form-label-group">
