Mods register page
Removed unused fields

--- a/public/views/main/register.hbs
+++ b/public/views/main/register.hbs
@@ -23,44 +23,21 @@
         <form class="needs-validation" novalidate action="/register" method="post">
 
           <div class="form-group">
-            <label for="nom_enfant">Nom de l'enfant<span>*</span>: </label>
+            <label for="nom_enfant">Nom de l'enfant ou adolescent<span>*</span>: </label>
             <input type="text" class="form-control" name="nom_enfant" placeholder="Entrer le nom de famille" required autofocus>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_enfant">Prénom de l'enfant<span>*</span>: </label>
-            <input type="text" class="form-control" name="prenom_enfant" placeholder="Entrer le prénom de l'enfant" required>
+            <label for="prenom_enfant">Prénom de l'enfant ou adolescent<span>*</span>: </label>
+            <input type="text" class="form-control" name="prenom_enfant" placeholder="Entrer le prénom" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="date_de_naissance_enfant">Date de naissance<span>*</span>: </label>
-            <input type="date" class="form-control" name="date_de_naissance_enfant" placeholder="aaaa-mm-jj" required>
-            <div class="valid-feedback">Valide.</div>
-            <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-          </div>
-
-          <div class="form-group-inline">
-            <label for="sexe_enfant">Sexe<span>*</span>: </label>
-            <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_enfant" value="M">
-            <label for="sexe_enfant" class="ml-4">Garçon</label>
-            <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_enfant" value="F">
-            <label for="sexe_enfant" class="ml-4">Fille</label>
-          </div>
-
-          <div class="form-group">
-            <label for="courriel_enfant">Courriel<span>*</span>: </label>
-            <input type="email" class="form-control" id="courriel_enfant" name="courriel_enfant" placeholder="Entrer l'adresse courriel de l'enfant" required>
-            <div class="valid-feedback">Valide.</div>
-            <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-            <input type="checkbox" class="ml-1" onchange="onSelectCourrielEnfant(this)" name="courrielcheckenfant" value="true"> Mon enfant n'a pas une adresse courriel <br>
-          </div>
-
-          <div class="form-group">
-            <input type="checkbox" onchange="onSelectMono(this)" class="ml-1" id="famillecheck" name="famillecheck" value="true"> Êtes-vous une famille monoparentale? <br>
+            <input type="checkbox" onchange="onSelectMono(this)" class="ml-1" id="famillecheck" name="famillecheck" value="true"> 1 seul Contacts? <br>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
@@ -68,48 +45,33 @@
           <hr class="my-3">
 
           <div>
-            <h6 class="text-center"> Parent 1 </h6>
+            <h6 class="text-center"> contact 1 </h6>
           </div>
 
           <div class="form-group">
-            <label for="nom_parent1">Nom du parent<span>*</span>: </label>
-            <input type="text" class="form-control" name="nom_parent1" placeholder="Entrer le nom du parent" required>
+            <label for="nom_contact1">Nom du contact<span>*</span>: </label>
+            <input type="text" class="form-control" name="nom_contact1" placeholder="Entrer le nom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_parent1">Prénom du parent<span>*</span>: </label>
-            <input type="text" class="form-control" name="prenom_parent1" placeholder="Entrer le prénom du parent" required>
+            <label for="prenom_contact1">Prénom du Contact<span>*</span>: </label>
+            <input type="text" class="form-control" name="prenom_contact1" placeholder="Entrer le prénom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="date_de_naissance_parent1">Date de naissance<span>*</span>: </label>
-            <input type="date" class="form-control" name="date_de_naissance_parent1" placeholder="aaaa-mm-jj" required>
-            <div class="valid-feedback">Valide.</div>
-            <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-          </div>
-
-          <div class="form-group-inline">
-            <label for="sexe_parent1">Sexe<span>*</span>: </label>
-            <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_parent1" value="M">
-            <label for="sexe_parent1" class="ml-4">Homme</label>
-            <input type="radio" id="btnradio" class="form-check-input ml-2" name="sexe_parent1" value="F">
-            <label for="sexe_parent1" class="ml-4">Femme</label>
-          </div>
-
-          <div class="form-group">
-            <label for="courriel_parent1">Courriel<span>*</span>: </label>
-            <input type="email" class="form-control" name="courriel_parent1" placeholder="Entrer l'adresse courriel du parent" required>
+            <label for="num_telephone_contact1">Numéro de téléphone (Format: 819-000-0000)<span>*</span>: </label>
+            <input type="tel" class="form-control" name="num_telephone_contact1" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="num_telephone_parent1">Numéro de téléphone (Format: 819-000-0000)<span>*</span>: </label>
-            <input type="tel" class="form-control" name="num_telephone_parent1" placeholder="Entrer le numéro de téléphone du parent" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <label for="courriel_contact1">Courriel<span>*</span>: </label>
+            <input type="email" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
@@ -117,48 +79,34 @@
           <hr class="my-3">
 
           <div>
-            <h6 class="text-center"> Parent 2 </h6>
+            <h6 class="text-center"> contact 2 </h6>
           </div>
 
           <div class="form-group">
-            <label for="nom_parent2">Nom du parent: </label>
-            <input type="text" class="form-control" id="nom_parent2" name="nom_parent2" placeholder="Entrer le nom du parent" required>
+            <label for="nom_contact2">Nom du contact: </label>
+            <input type="text" class="form-control" id="nom_contact2" name="nom_contact2" placeholder="Entrer le nom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_parent2">Prénom du parent: </label>
-            <input type="text" class="form-control" id="prenom_parent2" name="prenom_parent2" placeholder="Entrer le prénom du parent" required>
+            <label for="prenom_contact2">Prénom du Contact1: </label>
+            <input type="text" class="form-control" id="prenom_contact2" name="prenom_contact2" placeholder="Entrer le prénom du contact" required>
+            <div class="valid-feedback">Valide.</div>
+            <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
+          </div>
+
+
+          <div class="form-group">
+            <label for="courriel_contact2">Courriel: </label>
+            <input type="email" class="form-control" id="courriel_contact2" name="courriel_contact2" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="date_de_naissance_parent2">Date de naissance: </label>
-            <input type="date" class="form-control" id="date_de_naissance_parent2" name="date_de_naissance_parent2" placeholder="aaaa-mm-jj" required>
-            <div class="valid-feedback">Valide.</div>
-            <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-          </div>
-
-          <div class="form-group-inline">
-            <label for="sexe_parent2">Sexe: </label>
-            <input type="radio" id="btnradio2" class="form-check-input ml-2" name="sexe_parent2" value="M">
-            <label for="sexe_parent2" class="ml-4">Homme</label>
-            <input type="radio" id="btnradio3" class="form-check-input ml-2" name="sexe_parent2" value="F">
-            <label for="sexe_parent2" class="ml-4">Femme</label>
-          </div>
-
-          <div class="form-group">
-            <label for="courriel_parent2">Courriel: </label>
-            <input type="email" class="form-control" id="courriel_parent2" name="courriel_parent2" placeholder="Entrer l'adresse courriel du parent" required>
-            <div class="valid-feedback">Valide.</div>
-            <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-          </div>
-
-          <div class="form-group">
-            <label for="num_telephone_parent2">Numéro de téléphone (Format: 819-000-0000): </label>
-            <input type="tel" class="form-control" id="num_telephone_parent2" name="num_telephone_parent2" placeholder="Entrer le numéro de téléphone du parent" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <label for="num_telephone_contact2">Numéro de téléphone (Format: 819-000-0000): </label>
+            <input type="tel" class="form-control" id="num_telephone_contact2" name="num_telephone_contact2" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
@@ -167,18 +115,6 @@
 
           <div>
             <h6 class="text-center"> Information du compte </h6>
-          </div>
-
-          <div class="form-group">
-            <label class="mt-1" for="courriel_utilise">Quelle adresse courriel voulez-vous utilisé pour le compte?<span>*</span> </label>
-          </div>
-          <div class="form-group">
-            <input type="checkbox" id="btnemail1" class="form-check-input ml-2" name="courriel_utilise1" value="parent1">
-            <label for="courriel_utilise1" class="ml-4">Parent 1</label>
-            <input type="checkbox" id="btnemail2" class="form-check-input ml-2" name="courriel_utilise2" value="parent2">
-            <label for="courriel_utilise2" class="ml-4">Parent 2</label>
-            <input type="checkbox" id="btnemail3" class="form-check-input ml-2" name="courriel_utilise3" value="enfant">
-            <label for="courriel_utilise3" class="ml-4">Enfant</label>
           </div>
 
           <div class="form-group-inline">
