--- a/public/views/main/register.hbs
+++ b/public/views/main/register.hbs
@@ -23,15 +23,15 @@
         <form class="needs-validation" novalidate action="/register" method="post">
 
           <div class="form-group">
-            <label for="nom_enfant">Nom de l'enfant ou adolescent: </label>
-            <input type="text" class="form-control" name="nom_enfant" placeholder="Entrer le nom de famille" required autofocus>
+            <label for="nom_client">Nom de l'enfant ou adolescent: </label>
+            <input value="Lacroix" type="text" class="form-control" name="nom_client" placeholder="Entrer le nom de famille" required autofocus>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
-            <label for="prenom_enfant">Prénom de l'enfant ou adolescent: </label>
-            <input type="text" class="form-control" name="prenom_enfant" placeholder="Entrer le prénom" required>
+            <label for="prenom_client">Prénom de l'enfant ou adolescent: </label>
+            <input value="Gabriel" type="text" class="form-control" name="prenom_client" placeholder="Entrer le prénom" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
@@ -50,31 +50,31 @@
 
           <div class="form-group">
             <label for="nom_contact1">Nom du Contact: </label>
-            <input type="text" class="form-control" name="nom_contact1" placeholder="Entrer le nom du contact" required>
+            <input value="Lacroix" type="text" class="form-control" name="nom_contact1" placeholder="Entrer le nom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
             <label for="prenom_contact1">Prénom du Contact: </label>
-            <input type="text" class="form-control" name="prenom_contact1" placeholder="Entrer le prénom du contact" required>
+            <input value="Jean-Marc" type="text" class="form-control" name="prenom_contact1" placeholder="Entrer le prénom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
             <label for="num_telephone_contact1">Numéro de téléphone (Format: 819-000-0000): </label>
-            <input type="tel" class="form-control" name="num_telephone_contact1" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <input value="819-598-8412" type="tel" class="form-control" name="num_telephone_contact1" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div id=divEmail1 class="form-group">
             <label for="courriel_contact1">Courriel: </label>
-            <input type="email" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" required>
+            <input value="Jean@client.ca" type="email" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-            <button type="button" id="email1" onclick="ajoutChampContact(1)" class="btn btn-outline-primary btn-sm mt-1">+</button>
+            <button type="button" id="email1" onclick="ajoutChampContact1(1)" class="btn btn-outline-primary btn-sm mt-1">+</button>
           </div>
 
           <hr class="my-3">
@@ -85,31 +85,31 @@
 
           <div class="form-group">
             <label for="nom_contact2">Nom du Contact: </label>
-            <input type="text" class="form-control" id="nom_contact2" name="nom_contact2" placeholder="Entrer le nom du contact" required>
+            <input value="Fontaine" type="text" class="form-control" id="nom_contact2" name="nom_contact2" placeholder="Entrer le nom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
             <label for="prenom_contact2">Prénom du Contact: </label>
-            <input type="text" class="form-control" id="prenom_contact2" name="prenom_contact2" placeholder="Entrer le prénom du contact" required>
+            <input value="Nicole" type="text" class="form-control" id="prenom_contact2" name="prenom_contact2" placeholder="Entrer le prénom du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
             <label for="num_telephone_contact2">Numéro de téléphone (Format: 819-000-0000): </label>
-            <input type="tel" class="form-control" id="num_telephone_contact2" name="num_telephone_contact2" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <input value="819-598-8412" type="tel" class="form-control" id="num_telephone_contact2" name="num_telephone_contact2" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div id=divEmail2 class="form-group">
             <label for="courriel_contact2">Courriel: </label>
-            <input type="email" class="form-control" id="courriel_contact2" name="courriel_contact2" placeholder="Entrer l'adresse courriel du contact" required>
+            <input value="Nicole@client.ca" type="email" class="form-control" id="courriel_contact2" name="courriel_contact2" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-            <button type="button" id="email2" onclick="ajoutChampContact(2)" class="btn btn-outline-primary btn-sm mt-1">+</button>
+            <button type="button" id="email2" onclick="ajoutChampContact2(2)" class="btn btn-outline-primary btn-sm mt-1">+</button>
           </div>
 
           <hr class="my-3">
