Updated Client profile page
the page is ready for the route to be modified to receive the correct data

--- a/public/views/main/register.hbs
+++ b/public/views/main/register.hbs
@@ -2,7 +2,6 @@
 
   <link rel="stylesheet" href="../../css/createaccount.css">
   <script type="text/javascript" src="../../script/createaccount/createaccount.js"></script>
-  <script type="text/javascript" src="../../script/createaccount/validation.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -64,7 +63,7 @@
 
           <div class="form-group">
             <label for="num_telephone_contact1">Numéro de téléphone (Format: 819-000-0000): </label>
-            <input value="819-598-8412" type="tel" class="form-control" name="num_telephone_contact1" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <input type="tel" class="form-control" name="num_telephone_contact1" placeholder="Entrer le numéro de téléphone du contact" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
